--- a/01 - Drum Kit/scss/main.scss
+++ b/01 - Drum Kit/scss/main.scss
@@ -62,6 +62,7 @@
       margin: 10px 15px;
       padding: 10px;
       z-index: 2;
+      transition: all 0.07s;
 
       kbd {
         display: inline-block;
@@ -78,4 +79,10 @@
       }
     }
   }
+}
+
+.playing {
+  transform: scale(1.1);
+  border-color: orange !important;
+  box-shadow: 0 0 10px orange;
 }
